@@ -3,3 +3,5 @@ ALL	ALL=(root)	NOPASSWD:	/opt/inist-tools/tools/apt-proxy-off.sh
 ALL	ALL=(root)	NOPASSWD:	/opt/inist-tools/tools/timesync.sh
 ALL	ALL=(root)	NOPASSWD:	/opt/inist-tools/tools/powermax.sh
 ALL	ALL=(root)	NOPASSWD:	/opt/inist-tools/tools/powersave.sh
+ALL	ALL=(root)	NOPASSWD:	/opt/inist-tools/tools/docker-proxy-on.sh
+ALL	ALL=(root)	NOPASSWD:	/opt/inist-tools/tools/docker-proxy-off.sh
