@@ -12,7 +12,7 @@
 # ------------------------------------------------------------------------------
 # DOCKER
 # ------------------------------------------------------------------------------
-function _it_misc_docker_proxy {
+function _it_docker_proxy {
   # Check si bower est installé
   if ! _it_std_check_command "docker" ; then
     return $FALSE
@@ -21,9 +21,21 @@ function _it_misc_docker_proxy {
   case "$1" in
   
     on)
+      sudo /opt/inis-tools/tools/docker-proxy-on.sh
+      if [ $? -eq 0]; then
+        _it_std_consoleMessage "INFO" "Docker est configuré pour utiliser le proxy INIST"
+      else
+        _it_std_consoleMessage "ERROR" "La configuration de Docker pour le proxy INIST a échoué"
+      fi
     ;;
     
     off)
+      sudo /opt/inis-tools/tools/docker-proxy-off.sh
+      if [ $? -eq 0]; then
+        _it_std_consoleMessage "INFO" "Docker n'est plus configuré pour utiliser le proxy INIST"
+      else
+        _it_std_consoleMessage "ERROR" "La déconfiguration de Docker pour le proxy INIST a échoué"
+      fi
     ;;
     
     help)
